added projects page

--- a/src/components/layout/BaseFooter.astro
+++ b/src/components/layout/BaseFooter.astro
@@ -1,13 +1,13 @@
 ---
 ---
 
-<footer class='bg-black text-white p-6'>
-  <h2 class='hidden'>Footer</h2>
-  <p class='outfit'>
-    Brutal theme for Astro - by <a
-      href='https://www.elian.codes/'
-      target='_blank'
-      class='text-blue'>ElianCodes</a
+<footer class="bg-black text-white p-6">
+  <h2 class="hidden">Footer</h2>
+  <p class="outfit">
+    <a
+      href="https://www.github.com/umairabbasdev"
+      target="_blank"
+      class="text-blue">Umair Abbas</a
     >
   </p>
 </footer>
