--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,59 +1,67 @@
 ---
-import Layout from '../layouts/Default.astro';
-import RecentBlogPosts from '../components/generic/RecentBlogPosts.astro';
-import MobileSocials from '../components/home/MobileSocials.astro';
-import Card from '../components/generic/Card.astro';
-import Button from '../components/generic/Button.astro';
-import TagItem from '../components/blog/TagItem.astro';
+import Layout from "../layouts/Default.astro";
+import RecentBlogPosts from "../components/generic/RecentBlogPosts.astro";
+import RecentProjects from "../components/generic/RecentProjects.astro";
+import MobileSocials from "../components/home/MobileSocials.astro";
+import Card from "../components/generic/Card.astro";
+import Button from "../components/generic/Button.astro";
+import TagItem from "../components/blog/TagItem.astro";
 
 const builtWith = [
-  { name: 'Astro', url: 'https://astro.build/' },
-  { name: 'UnoCSS', url: 'https://uno.antfu.me/' },
-  { name: 'Content Collections', url: 'https://docs.astro.build/en/guides/content-collections/' },
-  { name: 'RSS', url: 'https://docs.astro.build/en/guides/rss/' },
-  { name: 'Sitemap', url: 'https://docs.astro.build/en/guides/integrations-guide/sitemap/' },
-  { name: 'Vercel', url: 'https://vercel.com' },
-  { name: 'TypeScript', url: 'https://www.typescriptlang.org/' },
+  { name: "Astro", url: "https://astro.build/" },
+  { name: "UnoCSS", url: "https://uno.antfu.me/" },
+  {
+    name: "Content Collections",
+    url: "https://docs.astro.build/en/guides/content-collections/",
+  },
+  { name: "RSS", url: "https://docs.astro.build/en/guides/rss/" },
+  {
+    name: "Sitemap",
+    url: "https://docs.astro.build/en/guides/integrations-guide/sitemap/",
+  },
+  { name: "Vercel", url: "https://vercel.com" },
+  { name: "TypeScript", url: "https://www.typescriptlang.org/" },
 ];
 ---
 
 <Layout
-  title='Home'
-  pageTitle='Brutal Theme | Home'
-  description='Brutal is a minimalistic, neobrutalism theme for Astro.'
+  title="Home"
+  pageTitle="Brutal Theme | Home"
+  description="Brutal is a minimalistic, neobrutalism theme for Astro."
 >
-  <main class='bg-pink p-6'>
+  <main class="bg-pink p-6">
     <MobileSocials />
-    <section id='about' class='grid md:grid-cols-8 gap-8 mt-4'>
-      <h2 class='hidden'>About Brutal</h2>
+    <section id="about" class="grid  md:grid-cols-8 gap-8 mt-4">
+      <h2 class="hidden">About Brutal</h2>
       <Card
-        color='green'
-        extraClasses='flex flex-col justify-between gap-4 items-start md:col-span-4'
+        color="green"
+        extraClasses=" flex flex-col justify-between gap-4 items-start md:col-span-5 row-span-2"
       >
-        <p class='mt-4 outfit text-2xl md:text-5xl lg:text-7xl'>
+        <p class="mt-4 outfit text-2xl md:text-5xl lg:text-7xl">
           Brutal theme for <a
-            class='text-white'
-            target='_blank'
-            href='https://astro.build/'>Astro</a
+            class="text-white"
+            target="_blank"
+            href="https://astro.build/">Astro</a
           >
         </p>
-        <p class='mt-2 outfit text-xl md:text-3xl lg:text-5xl'>
+        <p class="mt-2 outfit text-xl md:text-3xl lg:text-5xl">
           A minimalistic, neobrutalism theme for Astro.
         </p>
-        <Button href='/blog/'>Check out the blog &rarr;</Button>
+        <Button href="/blog/">Check out the blog &rarr;</Button>
       </Card>
-      <Card color='blue' extraClasses='col-span-2'>
-        <h2 class='text-2xl md:text-4xl lg:text-6xl mb-8 dm-serif'>
+      
+      <Card color="blue" extraClasses="col-span-3">
+        <h2 class="text-2xl md:text-4xl lg:text-6xl mb-8 dm-serif">
           Brutal is built with
         </h2>
-        <ul class='flex gap-4 flex-wrap'>
+        <ul class="flex gap-4 flex-wrap">
           {
             builtWith.map((item) => (
               <li>
                 <TagItem>
                   <a
                     href={item.url}
-                    target='_blank'
+                    target="_blank"
                     title={`Go to ${item.name}`}
                   >
                     {item.name}
@@ -64,18 +72,20 @@ const builtWith = [
           }
         </ul>
       </Card>
-      <Card color='orange' extraClasses='col-span-2'>
-        <h2 class='text-2xl md:text-4xl lg:text-6xl mb-4 dm-serif'>
+
+      <Card color="orange" extraClasses="col-span-3">
+        <h2 class="text-2xl md:text-4xl lg:text-6xl mb-4 dm-serif">
           What is Brutal?
         </h2>
-        <p class='poppins'>
+        <p class="poppins">
           Brutal is a theme built with Astro, UnoCSS by <a
-            href='https://www.elian.codes/'>Elian</a
+            href="https://www.github.com/">Umair Abbas</a
           >. It's a simple, fast, and modern theme that is easy to use and
           customize. Mainly meant to power blogs and personal websites.
         </p>
       </Card>
     </section>
     <RecentBlogPosts />
+    <RecentProjects />
   </main>
 </Layout>
