--- a/src/components/generic/RecentBlogPosts.astro
+++ b/src/components/generic/RecentBlogPosts.astro
@@ -16,7 +16,7 @@ const posts = await getCollection('blog').then((posts) =>
 ---
 
 <section class='mt-8'>
-  <Card color='red'>
+  <Card color='cyan'>
     <div class='flex justify-between items-start'>
       <h2 class='text-2xl md:text-4xl lg:text-6xl mb-8 dm-serif'>
         Recent Blogposts
