--- a/src/components/home/MobileSocials.astro
+++ b/src/components/home/MobileSocials.astro
@@ -1,31 +1,31 @@
 ---
 const socials = [
   {
-    name: 'GitHub',
-    url: 'https://github.com/eliancodes',
-    icon: 'i-uil-github',
+    name: "GitHub",
+    url: "https://github.com/umairabbasDev",
+    icon: "i-uil-github",
   },
   {
-    name: 'Twitter',
-    url: 'https://www.twitter.com/eliancodes',
-    icon: 'i-uil-twitter',
+    name: "Twitter",
+    url: "https://www.twitter.com/umair_abba",
+    icon: "i-uil-twitter",
   },
   {
-    name: 'LinkedIn',
-    url: 'https://www.linkedin.com/in/elianvancutsem',
-    icon: 'i-uil-linkedin',
+    name: "Linkedin",
+    url: "https://www.linkedin.com/in/umair-abbas-a43503121/",
+    icon: "i-uil-linkedin",
   },
 ];
 ---
 
-<section class='md:hidden'>
-  <h2 class='hidden'>Socials section</h2>
-  <ul class='flex justify-between'>
+<section class="md:hidden">
+  <h2 class="hidden">Socials section</h2>
+  <ul class="flex justify-between">
     {
       socials.map((item) => (
-        <li class='bg-white px-4 py-2 text-green border-black border-2 rounded card-shadow'>
-          <a href={item.url} target='_blank' title={`Go to ${item.name}`}>
-            <div class:list={[item.icon, 'p-6']} />
+        <li class="bg-white px-4 py-2 text-green border-black border-2 rounded card-shadow">
+          <a href={item.url} target="_blank" title={`Go to ${item.name}`}>
+            <div class:list={[item.icon, "p-6"]} />
           </a>
         </li>
       ))
