--- a/src/components/layout/BaseHead.astro
+++ b/src/components/layout/BaseHead.astro
@@ -12,15 +12,15 @@ const { title, description } = Astro.props;
 <head>
   <meta charset='utf-8' />
   <meta name='viewport' content='width=device-width, initial-scale=1' />
-  <meta name='generator' content={Astro.generator} />
-
+  <!-- <meta name='generator' content={Astro.generator} /> -->
+<!-- 
   <link
     rel='alternate'
     href='https://brutal.elian.codes/blog.xml'
     type='application/rss+xml'
-  />
+  /> -->
 
-  <meta name='title' content={`Brutal Theme | ${title}`} />
+  <meta name='title' content={`Umair Abbas | ${title}`} />
   <meta name='description' content={description} />
 
   <meta property='og:type' content='website' />
@@ -34,9 +34,9 @@ const { title, description } = Astro.props;
   <meta property='twitter:description' content={description} />
 
   <link rel='canonical' href={canonicalURL} />
-  <link rel='icon' type='image/x-icon' href='/favicon.ico' />
+  <!-- <link rel='icon' type='image/x-icon' href='/favicon.ico' /> -->
 
-  <title>Brutal Theme | {title}</title>
+  <title>Umair Abbas | {title}</title>
 
   <!-- fonts -->
   <link rel='preconnect' href='https://fonts.googleapis.com' />
