--- a/src/components/project/ProjectSummaryCard.astro
+++ b/src/components/project/ProjectSummaryCard.astro
@@ -25,7 +25,7 @@ const { project } = Astro.props;
   <div class="hidden sm:inline-block">
     <p class="poppins mt-2">dependencies:</p>
     <div class="flex justify-between items-center">
-      <ul class="flex gap-4 mt-2">
+      <ul class="flex gap-4 mt-2 flex-wrap">
         {
           project.data.dependencies.map((dependency) => {
             return (
