--- a/src/layouts/Default.astro
+++ b/src/layouts/Default.astro
@@ -1,7 +1,7 @@
 ---
-import BaseNavigation from '../components/layout/BaseNavigation.astro';
-import BaseFooter from '../components/layout/BaseFooter.astro';
-import BaseHead from '../components/layout/BaseHead.astro';
+import BaseNavigation from "../components/layout/BaseNavigation.astro";
+import BaseFooter from "../components/layout/BaseFooter.astro";
+import BaseHead from "../components/layout/BaseHead.astro";
 
 interface Props {
   title: string;
@@ -13,31 +13,31 @@ interface Props {
 const { title, description, classList, pageTitle } = Astro.props;
 ---
 
-<html lang='en' class='h-full'>
+<html lang="en" class="bg-gray">
   <BaseHead title={title} description={description} />
 
   <body class:list={[classList]}>
-    <BaseNavigation pageTitle={pageTitle} />
+    <!-- <BaseNavigation pageTitle={pageTitle} /> -->
     <slot />
-    <BaseFooter />
+    <!-- <BaseFooter /> -->
     <style is:global>
       .outfit {
-        font-family: 'Outfit', sans-serif;
+        font-family: "Outfit", sans-serif;
       }
       .righteous {
-        font-family: 'Righteous', sans-serif;
+        font-family: "Righteous", sans-serif;
       }
       .dm-serif {
-        font-family: 'DM Serif Text', serif;
+        font-family: "DM Serif Text", serif;
       }
       .fredoka {
-        font-family: 'Fredoka One', sans-serif;
+        font-family: "Fredoka One", sans-serif;
       }
       .poppins {
-        font-family: 'Poppins', sans-serif;
+        font-family: "Poppins", sans-serif;
       }
       .sanchez {
-        font-family: 'Sanchez', serif;
+        font-family: "Sanchez", serif;
       }
       .card-shadow {
         filter: drop-shadow(7px 7px 0 rgb(0 0 0 / 1));
