--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -86,10 +86,10 @@ const colors = [
         <p
           class="poppins card bg-white border-3 border-black rounded-lg p-4 w-150 place-self-center"
         >
-          Brutal is a theme built with Astro, UnoCSS by <a
-            href="https://www.github.com/">Umair Abbas</a
-          >. It's a simple, fast, and modern theme that is easy to use and
-          customize. Mainly meant to power blogs and personal websites.
+          As a software engineer, I specialize in building full-stack web
+          applications using various technologies. With expertise in React.js,
+          Node.js, JavaScript, TypeScript python and other web development
+          frameworks.
         </p>
         <div class="flex flex-row justify-between">
           <div class="flex flex-col place-self-start">
