--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -109,14 +109,21 @@ const colors = [
 
           <!-- intro box -->
           <!-- <Card color="gray" extraClasses="flex flex-col place-self-start mt-20 "> -->
-          <p
+          <div
             class="poppins card bg-white border-3 border-black rounded-lg p-4 mt-20 w-50 place-self-center"
           >
-            Brutal is a theme built with Astro, UnoCSS by <a
-              href="https://www.github.com/">Umair Abbas</a
-            >. It's a simple, fast, and modern theme that is easy to use and
-            customize. Mainly meant to power blogs and personal websites.
-          </p>
+            <table>
+              <ul>
+                <li>JavaScript</li>
+                <li>TypeScript</li>
+                <li>Python</li>
+                <li>C++</li>
+                <li>R</li>
+                <li>C#</li>
+                <li>Sass</li>
+              </ul>
+            </table>
+          </div>
           <!-- </Card> -->
         </div>
 
@@ -132,6 +139,12 @@ const colors = [
   .bg-comic-white {
     background-image: radial-gradient(circle, #ff0000 10%, transparent 25%);
     background-size: 10px 10px;
+  }
+  ul {
+    list-style-type: disc;
+  }
+  li {
+    margin-left: 5px;
   }
 </style>
 
