--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -84,12 +84,16 @@ const colors = [
         </div>
 
         <p
-          class="poppins card bg-white border-3 border-black rounded-lg p-4 w-150 place-self-center"
+          class="poppins card bg-white border-3 border-black rounded-lg p-4 w-200 place-self-center"
         >
-          As a software engineer, I specialize in building full-stack web
-          applications using various technologies. With expertise in React.js,
-          Node.js, JavaScript, TypeScript python and other web development
-          frameworks.
+          <span class="font-extrabold text-xl">Welcome to my portfolio!</span> I am a versatile software professional
+          with over 7 years of experience in web development, scripting, desktop
+          application development, and data scraping. My expertise includes the MERN
+          stack, Node.js, JavaScript, Python, and other modern technologies. I take
+          pride in writing clean, efficient, and maintainable code, delivering exceptional
+          user experiences. Whether you need a robust web application, a custom desktop
+          solution, or a data scraping tool, I'm ready for the challenge. Explore
+          my past projects and reach out if you're interested in collaboration.
         </p>
         <div class="flex flex-row justify-between">
           <div class="flex flex-col place-self-start">
@@ -109,6 +113,7 @@ const colors = [
 
           <!-- intro box -->
           <!-- <Card color="gray" extraClasses="flex flex-col place-self-start mt-20 "> -->
+
           <div
             class="poppins card bg-white border-3 border-black rounded-lg p-4 mt-20 w-50 place-self-center"
           >
@@ -124,7 +129,6 @@ const colors = [
               </ul>
             </table>
           </div>
-          <!-- </Card> -->
         </div>
 
         <Card color="white" type="no-dot" extraClasses="place-self-center">
