--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,18 +1,42 @@
 ---
 import Layout from "../layouts/Default.astro";
+const socials = [
+  {
+    name: "GitHub",
+    url: "https://github.com/umairabbasDev",
+    icon: "i-uil-github",
+  },
+  {
+    name: "Twitter",
+    url: "https://www.twitter.com/umair_abba",
+    icon: "i-uil-twitter",
+  },
+  {
+    name: "Linkedin",
+    url: "https://www.linkedin.com/in/umair-abbas-a43503121/",
+    icon: "i-uil-linkedin",
+  },
+];
 ---
 
 <Layout
   title="About"
-  description="Umair about | On this page you can find a detail about umair abbas"
+  description="Umair about | On this page you can find a detail about Umair Abbas"
   pageTitle="Umair Abbas about"
 >
-  <main class=" min-h-screen flex items-center justify-center">
-    <div class="bg-white rounded-lg shadow-md p-8 w-full mx-5">
-      <h1 class="text-3xl font-bold mb-4">About Me</h1>
-      <div class="mb-4 rounded-full w-20 h-20 object-cover object-center"></div>
+  <main class="min-h-screen flex items-center justify-center bg-gray-200">
+    <div class="bg-gray-800 border-4 border-black p-8 w-full mx-5 max-w-4xl">
+      <h1
+        class="text-4xl font-bold text-white mb-4 border-b-2 border-white pb-2"
+      >
+        About Me
+      </h1>
+      <!-- <div
+        class="bg-gray-600 border-2 border-black rounded-full w-20 h-20 mb-4"
+      >
+      </div> -->
 
-      <p class="text-gray-700 mb-4">
+      <p class="text-white mb-4">
         Hi there! I'm Umair Muhammad Abbas, a passionate Senior ReactJS
         Developer with extensive experience in building modern and scalable web
         applications. My journey in the world of web development began 7 years
@@ -20,7 +44,7 @@ import Layout from "../layouts/Default.astro";
         ever since.
       </p>
 
-      <p class="text-gray-700 mb-4">
+      <p class="text-white mb-4">
         As a Senior ReactJS Developer, I specialize in front-end development
         using the latest technologies and best practices. I have a strong
         foundation in JavaScript, Typescript, React, Expressjs, nodejs, Nextjs
@@ -28,21 +52,21 @@ import Layout from "../layouts/Default.astro";
         robust and efficient solutions for complex problems.
       </p>
 
-      <p class="text-gray-700 mb-4">
+      <p class="text-white mb-4">
         My approach to development revolves around a commitment to clean,
         maintainable code and a user-centric design philosophy. I thrive in
         collaborative environments and enjoy tackling challenges that push the
         boundaries of what's possible in web development.
       </p>
 
-      <p class="text-gray-700 mb-4">
+      <p class="text-white mb-4">
         Outside of coding, I'm always eager to stay up-to-date with industry
         trends, attend conferences, and contribute to the developer community. I
         believe in continuous learning and strive to bring fresh perspectives to
         every project I work on.
       </p>
 
-      <p class="text-gray-700">
+      <p class="text-white">
         Let's create something amazing together! Feel free to reach out if you
         have any questions or if you're interested in collaborating on a
         project.
@@ -50,29 +74,22 @@ import Layout from "../layouts/Default.astro";
 
       <!-- Contact Information -->
       <div class="mt-8">
-        <p class="text-lg font-bold mb-2">Contact Information</p>
-        <p>
-          Email: <a
-            href="mailto:your.email@example.com"
-            class="text-blue-500 hover:underline">your.email@example.com</a
-          >
+        <p
+          class="text-lg font-bold text-white mb-2 border-b-2 border-white pb-1"
+        >
+          Contact Information
         </p>
-        <p>
-          LinkedIn: <a
-            href="https://www.linkedin.com/in/your-linkedin-profile"
-            target="_blank"
-            class="text-blue-500 hover:underline"
-            >linkedin.com/in/your-linkedin-profile</a
-          >
-        </p>
-        <p>
-          GitHub: <a
-            href="https://github.com/your-github-username"
-            target="_blank"
-            class="text-blue-500 hover:underline"
-            >github.com/your-github-username</a
-          >
-        </p>
+        <div class="flex justify-between">
+          {
+            socials.map((item) => (
+              <div class="bg-white px-4 py-2 text-black border-black border-2 rounded card-shadow">
+                <a href={item.url} target="_blank" title={`Go to ${item.name}`}>
+                  <div class:list={[item.icon, "p-6"]} />
+                </a>
+              </div>
+            ))
+          }
+        </div>
       </div>
     </div>
   </main>
